--- a/emp_mgmt.html
+++ b/emp_mgmt.html
@@ -33,7 +33,7 @@
                     <th>Birthdate</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody id="employeeTableBody">
                 <tr>
                     <td>John</td>
                     <td>Doe</td>
